--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
-    "@linaria/babel-preset": "^4.0.0-beta.0",
-    "@linaria/core": "^4.0.0-beta.0",
-    "@linaria/react": "^4.0.0-beta.0",
-    "@linaria/webpack-loader": "^4.0.0-beta.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^6.2.1",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
@@ -25,17 +22,22 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
